SERVER-12487 addressed smilint errors; reorg enterprise structure

fixed smilint errors & reorged enterprise structures
removed metrics.repl.oplog.* as removed in db.serverStatus
fixed SNMP date formatting to conform to DateAndTime spec
removed c-style casts; fixed DateAndTime len
Updated readme for new MIB name

GitOrigin-RevId: cb9d4d9a3a3343292fab1e62104b29f1ceaf5016